improve `Parameters.isValidName`
this method should validate a parameter name according to the lexer
rules of the olca-formula package. The rule for an identifier,
and parameter names are used as identifiers in formulas, is:

```
// identifiers
TOKEN :
{
    < #LETTER: ["a"-"z", "A"-"Z"] >
    | < #OTHERCHARS: ("_"|"$") >
    | < IDENTIFIER: ( <OTHERCHARS> | <LETTER> )+ ( <DIGIT> | <LETTER> | <OTHERCHARS>)* >
}
```

make the test as fast as possible and avoid the interpreter call
at all.

this means, it should be fast enough for checking parameter names in
the validation